# fastembed_vectorstore

./: .gitignore  Cargo.toml  README.md  fastembed_vectorstore.pyi  pyproject.toml  requirements.txt  test.py
.github/workflows/: CI.yml  publish.yml
src/: embedding_model.rs  lib.rs  vector_store.rs
