[package]
name = "fastembed_vectorstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastembed_vectorstore"
crate-type = ["cdylib"]

[dependencies]
fastembed = "4.9.1"
pyo3 = "0.25.0"
serde_json = "1.0.140"
num_cpus = "1.16.0"
openssl = { version = "0.10", features = ["vendored"] }
