[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fastembed_vectorstore"
version = "0.1.0"
description = "A Rust-based in-memory vector store with fastembed"
authors = [{ name = "sauravniraula", email = "developmentsaurav@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["fastembed", "vector-store", "python", "rust"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
