[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fastembed_vectorstore"
version = "0.1.5"
description = "A Rust-based in-memory vector store with fastembed"
authors = [{ name = "sauravniraula", email = "developmentsaurav@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["fastembed", "vectorstore", "python", "rust"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Repository = "https://github.com/sauravniraula/fastembed_vectorstore"
Issues = "https://github.com/sauravniraula/fastembed_vectorstore/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["fastembed_vectorstore.pyi"]
